# caldata-mdsa-caltrans-pems

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .sqlfluff  .sqlfluffignore  .yamllint  404.html  LICENSE  README.md  custom-dictionary.txt  deploy-dags.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pre-commit.yml  python_jobs.yml  terraform-checks.yml  terraform.yml
architecture/: index.html
dags/: backfill.py  load_from_clearinghouse.py  parse_d7_vds_data.py
data-loading/: index.html
data-warehouse-performance/: index.html
data/G-factor speed/: index.html
data/bottlenecks/: index.html
data/data-relay/: index.html
data/data-transform/: index.html
data/detector-health/: index.html
data/exploratory-data-analysis/: index.html
data/imputation/: index.html
data/performance-calcs/: index.html
dbt_docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
dbt_docs/compiled/caldata_mdsa_caltrans_pems/models/: sample_data.sql
dbt_docs_snowflake/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
docs/: architecture.md  data-loading.md  data-warehouse-performance.md  data_relay.md  exploratory-data-analysis.md  incremental.md  index.md  setup.md  writing-documentation.md
docs/data/: G-factor speed.md  bottlenecks.md  data-relay.md  data-transform.md  detector-health.md  detector_health.md  exploratory-data-analysis.md  imputation.md  performance-calcs.md
exploratory-data-analysis/: index.html
incremental/: index.html
jobs/: __init__.py  create_stored_procedures.py  load_geo_reference_data.py
jobs/data_relay/: README.md  append_to_crawl_queue.py  aws_upload_daemon_script.sh  config.cron  oracle_puller_daemon.py  table_aws_uploader.py
jobs/data_relay/data_relay_scripts/: append_to_crawl_queue.py  append_to_crawl_queue_config.py  aws_upload_daemon_script.sh  crontab.txt  oracle_puller.service  oracle_puller.service.sh  oracle_puller_daemon.py  schema_option_D7.VDS30SEC.pkl  table_aws_uploader.py
jobs/data_relay/oracle_puller/: pyproject.toml
jobs/data_relay/uploader/: pyproject.toml
jobs/utils/: geo.py  snowflake.py
pems/: missing_data.ipynb  pems_eda.ipynb  plotly_eda_dashboard.py
scripts/: setup_clearinghouse.sql
search/: search_index.json
setup/: index.html
stylesheets/: extra.css
terraform/environments/common/: meta_pipe.sql.tplfile
terraform/environments/dev/: .terraform.lock.hcl  caltrans-pems-dev.tfbackend  main.tf
terraform/environments/prd/: .terraform.lock.hcl  caltrans-pems-prd.tfbackend  main.tf
terraform/modules/s3-lake/: iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
terraform/modules/snowflake-clearinghouse/: main.tf  outputs.tf  raw_pipe.sql.tplfile  status_pipe.sql.tplfile  variables.tf  vds30sec_pipe.sql.tplfile
transform/: .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  selectors.yml
transform/ci/: profiles.yml
transform/macros/: _macros.yml  create_udfs.sql  drop_schemas_with_prefix.sql  exponential_smoothing.sql  get_city_name.sql  get_county_abbreviation.sql  get_county_name.sql  get_custom_schema.sql  get_scd_2_data.sql  get_snowflake_refresh_warehouse.sql  get_snowflake_warehouse.sql  make_model_duplicate_proof.sql  make_model_incremental.sql  map_county_fips_to_county_name.sql  timestamp_spine.sql  unload_relation.sql  unload_relation_as_geojson.sql  validate_all_schemas.sql  write_iceberg_metadata.sql
transform/models/: _models.yml  _sources.yml  int_station_flow_by_date.sql  int_stations.sql  overview.md  sample_data.sql  stg_pems__station_meta.sql  stg_station_meta.sql  stg_station_raw.sql  test_models.sql
transform/models/imputation/: int_imputation_global_regression_coefficients.sql
transform/models/incremental/: sample_incremental.sql
transform/models/marts/diagnostics/: _diagnostics-marts.yml  _diagnostics.yml  diagnostics__detector_daily_by_station.sql  diagnostics__detector_daily_detail.sql  diagnostics__detector_monthly_by_station.sql  diagnostics__detector_yearly_status.sql
transform/models/marts/geo/: geo.yml  geo__current_detectors.sql  geo__current_stations.sql
transform/models/marts/imputation/: _imputation.yml  imputation__detector_imputed_agg_five_minutes.sql  imputation__detector_summary.sql  imputation__station_summary.sql
transform/models/marts/performance/: _other.yml  _performance.yml  _station_bottleneck_agg.yml  _station_bottleneck_unpivot_agg.yml  _station_metrics_agg.yml  _station_metrics_unpivot_agg.yml  config_details.sql  config_geometry.sql  detector_health_full_sample.sql  detector_health_non_geospatial_sample.sql  detectors_health_sample.sql  non_geospatial_sample.sql  perfomance__station_agg_yearly.sql  perforamce__station_aadt_k_value.sql  performance__agg_daily_city.sql  performance__agg_daily_district.sql  performance__agg_monthly_city.sql  performance__agg_monthly_county.sql  performance__agg_monthly_district.sql  performance__agg_weekly_city.sql  performance__agg_weekly_county.sql  performance__agg_weekly_district.sql  performance__agg_yearly_city.sql  performance__agg_yearly_county.sql  performance__agg_yearly_district.sql  (+65 more)
transform/models/staging/: _models.yml  cleaninghouse_station_meta.sql  stg_clearinghouse__station_status.sql  stg_pems__station_30SecRaw.sql  stg_pems__station_meta.sql  stg_renaming_columns_and_extract_the_date.sql
transform/seeds/: cities.csv  counties.csv  detector_station_types.csv  diag_thresh_set.csv  diagnostic_threshold_values.csv  districts.csv  properties.yml  states.csv
transform/tests/: assert_delay_is_positive.sql  assert_delay_metrics_are_positive.sql  flow_1_is_pos_or_null.sql
transform/tests/generic/: copy_history_24h.sql  five_minute_daily_count.sql  not_empty.sql
transform/tests/singular/: verify_288_daily_detector_observations.sql
writing-documentation/: index.html
(+150 files in other folders)
