[tool.poetry]
name = "caldata-mdsa-caltrans-pems"
version = "0.1.0"
description = "\"Traffic Operations PeMS Modernization\""
authors = ["Traffic Operations <Zhenyu.Zhu@dot.ca.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "~9.1.3"
dbt-core = "~1.6.0"
dbt-snowflake = "~1.6.0"
jupyterlab = "^4.0.9"
ibis-framework = {extras = ["snowflake"], version = "^7.2.0"}
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
dash = "^2.14.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
sqlfluff = "2.3.0"
sqlfluff-templater-dbt = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # comprehensions
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PLC", # pylint
  "PLE", # pylint
  "PLR", # pylint import style
  "PLW", # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # flake8-2020

]
respect-gitignore = true
ignore = [
  "D100", # public module
  "D101", # public class
  "D102", # public method
  "D103", # public function
  "D104", # public package
  "D203", # blank line before docstring
  "D212", # Start multi-line docstring at the second line.
  "E501", # line length handled by black
  "ISC001", # Handled by formatter
  "PGH003", # specific mypy ignore codes
  "PLR0913", # too many arguments
  "PLR0912", # too many branches
  "RET505", # no-else-return
  "RET506", # no-else-raise
]
target-version = "py310"

[tool.ruff.lint]
exclude = ["jobs/data_relay/*.py"]

[tool.mypy]
python_version = "3.10"
allow_untyped_decorators = true # would love to enable this, but airflow decorators are untyped
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
